# site-painel-situacao-fiscal

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
comunidade/como_contribuir/: index.html
comunidade/como_replicar/: index.html
dados/fontes_dados/: index.html
dados/padrao_frictionless/: index.html
dados/pipeline_etl/: index.html
dashboard/desenvolvendo_o_painel/: index.html
dashboard/desenvolvendo_painel/: index.html
dashboard/guia_usuario/: index.html
dashboard/scripts_centrais/: index.html
dashboard/scripts_indicadores/: index.html
docs/: index.md
docs/comunidade/: como_contribuir.md  como_replicar.md
docs/dados/: fontes_dados.md  padrao_frictionless.md  pipeline_etl.md
docs/dashboard/: desenvolvendo_o_painel.md  desenvolvendo_painel.md  pagina_inicial.md  scripts_centrais.md  scripts_indicadores.md
docs/projeto/: arquitetura_tecnica.md  ferramentas.md  motivacao.md
projeto/arquitetura_tecnica/: index.html
projeto/ferramentas/: index.html
projeto/motivacao/: index.html
search/: search_index.json
