[project]
name = "site-painel-situacao-fiscal"
version = "0.1.0"
description = ""
authors = [
    {name = "Viviane Nascimento",email = "vivigoncalvesporto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "material (>=0.1,<0.2)",
    "mkdocs-material (>=9.6.21,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
